# detektor_ai

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-railway.yml
docs/: DECISIONS.md  DESIGN_SPEC.md  HANDOFF.md  ROADMAP.md
docs/design/screenshots/: README.md
src/detektor/: __init__.py  config.py  fusion.py  humanize.py  models.py  pipeline.py
src/detektor/data/: __init__.py  connectors_pl.yaml  slop_phrases_pl.yaml
src/detektor/heuristics/: __init__.py  base.py  lexical_diversity.py  punctuation_calque.py  registry.py  rhythm.py  slop_phrases.py  structural.py
src/detektor/llm/: __init__.py  discovery.py  gemini_judge.py  prompts.py  rewriter.py  schema.py
src/detektor/text/: __init__.py  normalize.py  segmentation.py
src/detektor_web/: __init__.py  app.py
src/detektor_web/static/: app.js  style.css
src/detektor_web/templates/: index.html
tests/: conftest.py  test_api.py  test_fusion.py  test_gemini_judge.py  test_heuristics.py  test_humanize.py  test_pipeline.py  test_segmentation.py
tests/fixtures/: clean_pl.txt  sloppy_pl.txt
