[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detektor-ai"
version = "0.1.0"
description = "Detektor AI slop w artykulach po polsku (heurystyki + Gemini)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "google-genai>=1.0",
]

[project.optional-dependencies]
nlp = ["spacy>=3.7"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/detektor", "src/detektor_web"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
